# MprExplorer

./: .gitignore  Cargo.toml  doc.md
proc_macros/: Cargo.toml
proc_macros/src/: lib.rs
src/: main.rs  structs.rs
src/structs/: code_actions.rs  constants.rs  custom_icons.rs  custom_widgets.rs  data_sets.rs  data_types.rs  document_templates.rs  domain_models.rs  enumerations.rs  export_mappings.rs  export_xml_action.rs  forms.rs  images.rs  import_mappings.rs  java_actions.rs  java_script_actions.rs  json_structures.rs  mappings.rs  menus.rs  message_definitions.rs  microflows.rs  navigation.rs  projects.rs  queues.rs  regular_expressions.rs  rest.rs  scheduled_events.rs  security.rs  settings.rs  texts.rs  web_services.rs  xml_schemas.rs
structs/: CodeActions.rs  Constants.rs  CustomIcons.rs  CustomWidgets.rs  DataSets.rs  DataTypes.rs  DocumentTemplates.rs  DomainModels.rs  Enumerations.rs  ExportMappings.rs  ExportXmlAction.rs  Forms.rs  Images.rs  ImportMappings.rs  JavaActions.rs  JavaScriptActions.rs  JsonStructures.rs  Mappings.rs  Menus.rs  MessageDefinitions.rs  Microflows.rs  Navigation.rs  Projects.rs  Queues.rs  RegularExpressions.rs  Rest.rs  ScheduledEvents.rs  Security.rs  Settings.rs  Texts.rs  WebServices.rs  XmlSchemas.rs
