[package]
name = "mendix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bson = { version = "2.8.1" }
convert_case = "0.6.0"
hex = "0.4.3"
rayon = "1.8.0"
rusqlite = { version = "0.30.0", features = ["bundled", "blob", "i128_blob"] }
serde = "1.0.194"
uuid = "1.6.1"
