[package]
name = "mendix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bson = { version = "2.11.0" }
convert_case = "0.6.0"
hex = "0.4.3"
indexmap = "2.2.6"
rayon = "1.10.0"
rusqlite = { version = "0.31.0", features = ["bundled", "blob", "i128_blob"] }
serde = "1.0.204"
uuid = "1.10.0"
proc_macros = { path = "proc_macros" }
serde_json = "1.0.120"

[profile.release]
debug = true
